--- a/filtro.css
+++ b/filtro.css
@@ -14,6 +14,10 @@ body {
 
 
 /* Sobre a configuração dos textos */
+
+#titulopag2 {
+    color:#FFF;
+}
 .texto{
     color: rgb(74, 234, 82);
 }
@@ -61,4 +65,36 @@ body {
 .textodiv1 {
     font-size: 120%;
     color: rgb(74, 234, 82);
+}
+
+
+
+/*menu brabo */
+
+ul {
+    margin: 0;
+    padding:0;
+}
+
+li {
+    list-style: none; 
+    margin: 10px;
+    display: inline;
+}
+li a {
+    padding: 5px 10px; 
+    margin:0;
+    border: 0px solid #f00; 
+    background: #903;
+    text-decoration: none;
+    color:#FFF;
+    /* cantos arredondados */
+    -webkit-border-radius:5px;
+    -moz-border-radius:5px;
+    border-radius:5px;
+}
+li a:hover {
+    background: #CCC;
+    color: #000; 
+    border-color: #000;
 }
